--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Simulation_Dec30.loader.js";
+      var loaderUrl = buildUrl + "/Simulation_Jan2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Simulation_Dec30.data.unityweb",
-        frameworkUrl: buildUrl + "/Simulation_Dec30.framework.js.unityweb",
-        codeUrl: buildUrl + "/Simulation_Dec30.wasm.unityweb",
+        dataUrl: buildUrl + "/Simulation_Jan2.data.unityweb",
+        frameworkUrl: buildUrl + "/Simulation_Jan2.framework.js.unityweb",
+        codeUrl: buildUrl + "/Simulation_Jan2.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Arsalan_fraud",
